--- a/TrumpAngular/src/index.html
+++ b/TrumpAngular/src/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TrumpAngular</title>
+  <title>Trumps</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="styles.css" type="text/css" rel="stylesheet">
 </head>
-<body>
+<body class="body">
   <app-root></app-root>
 </body>
 </html>
